2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger.Tests.csproj: Merged MD.Projects into
	  MD.Core, and MD.Projects.Gui, MD.Core.Gui and MD.Components
	  into MD.Ide.

2010-03-03  Lluis Sanchez Gual  <lluis@novell.com>

	* EvaluationTests.cs:
	* MdbEvaluationTests.cs: Fix tests. Formatting rules have
	  changed.

2010-03-02  Lluis Sanchez Gual  <lluis@novell.com>

	* DebugTests.cs:
	* EvaluationTests.cs:
	* MdbEvaluationTests.cs: Added boxing tests. Disable
	  assignment tests for MDB only, they now work with SDB.

2010-02-16  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger.Tests.csproj: Flush.

	* DebugTests.cs: Added support for lazy loading of add-ins

2009-12-16  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger.Tests.csproj: Add missing file.
